--- a/app/styles/components/_home.css
+++ b/app/styles/components/_home.css
@@ -16,14 +16,14 @@ $wrapper-padding: 16px;
 	margin: 3em auto;
 }
 
-.search-input {
+input, .search-input {
   padding: 0.5em 1.5em;
 	border: 1px solid #6CC0E5;
   border-radius: 3px;
   text-decoration: none;
 }
 
-.search-button {
+button, .search-button {
   padding: 0.5em 1.5em;
   border: 1px solid #6CC0E5;
   border-radius: 3px;
@@ -31,6 +31,6 @@ $wrapper-padding: 16px;
 	margin-left: 0.5em;
 }
 
-.search-button:hover {
+button:hover, .search-button:hover {
 	background-color: $brand-color;
 }
