styles major refactoring, bootstrap

--- a/app/styles/base/_fonts.css
+++ b/app/styles/base/_fonts.css
@@ -1,1 +1,14 @@
-/* This file contains all @font-face declarations, if any. */
+@font-face {
+  font-family: 'PentaLight';
+  src: url('../styles/fonts/penta-light.ttf')  format('truetype');
+}
+
+@font-face {
+  font-family: 'PentaBold';
+  src: url('../styles/fonts/penta-bold.ttf')  format('truetype');
+}
+
+@font-face {
+  font-family: 'Calibri';
+  src: url('../styles/fonts/calibri.ttf')  format('truetype');
+}
