--- a/app/styles/components/_home.css
+++ b/app/styles/components/_home.css
@@ -1,41 +1,29 @@
-$wrapper-padding: 16px;
 
-.wrapper {
-	max-width: calc($max-width + $wrapper-padding * 2);
-	margin: 0 auto;
-	display: flex;
-	height: 100%;
-	padding: 0 $wrapper-padding;
+.container {
+  font-family: Calibri;
 }
 
-#app {
-	height: 100%;
+.header-row {
+	margin-top: 20px;
+  text-align: left;
+  color: $green;
 }
 
-.text-section {
-	margin: 3em auto;
+.header-row h1 {
+	font-family: PentaLight;
 }
 
-input, .search-input {
-  padding: 0.5em 1.5em;
-	border: 1px solid #6CC0E5;
-  border-radius: 3px;
-  text-decoration: none;
+.header-row h1 em {
+	font-family: PentaBold;
+	font-style: normal;
 }
 
-button, .search-button {
-  padding: 0.5em 1.5em;
-  border: 1px solid #6CC0E5;
-  border-radius: 3px;
-  text-decoration: none;
-	margin-left: 0.5em;
-}
-
-button:hover, .search-button:hover {
-	background-color: $brand-color;
+.search-row {
+  margin-bottom: 20px;
 }
 
 .logo {
-	width: 100px;
-	height: 100px;
+	margin-top: 20px;
+  max-width: 100%;
+  max-height: 100%;
 }
