--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,7 +3,7 @@
 @charset 'UTF-8';
 
 /* 1. Vendors */
-@import 'vendor/_normalize.css';
+/*@import 'vendor/_normalize.css';*/
 
 /* 2. Configuration and helpers */
 @import 'utils/_variables.css';
@@ -12,6 +12,7 @@
 /* 3. Base stuff */
 @import 'base/_base.css';
 @import 'base/_typography.css';
+@import 'base/_fonts.css';
 
 /* 4. Layout-related sections */
 @import 'layout/_header.css';
