--- a/app/styles/components/_home.css
+++ b/app/styles/components/_home.css
@@ -27,3 +27,15 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+.terms {
+	cursor: pointer;
+}
+
+.terms .list-group-item:hover {
+	background-color: #e1ffed;
+}
+
+.terms .selected {
+	background-color: #e1ffed;
+}
