"no meanings" caption on the UI

--- a/app/styles/components/_edit.css
+++ b/app/styles/components/_edit.css
@@ -41,6 +41,10 @@
   cursor: pointer;
 }
 
+.meaningList .no-meanings {
+  margin-bottom: 10px;
+}
+
 .versionList li {
     padding-left: 10px;
     margin-bottom: 0px;
