--- a/app/styles/components/_home.css
+++ b/app/styles/components/_home.css
@@ -23,8 +23,8 @@
 
 .logo {
     margin-top: 20px;
-    max-width: 100%;
-    max-height: 100%;
+    /*max-width: 100%;
+    max-height: 100%;*/
 }
 
 .terms {
