bg-color fix white

--- a/app/styles/utils/_variables.css
+++ b/app/styles/utils/_variables.css
@@ -8,7 +8,7 @@ $brand-color: #6CC0E5;
 $dark-brand-color: #41ADDD;
 $error-color: #FB4F4F;
 
-$background-color: #FAFAFA;
+$background-color: #FFFFFF;
 $very-light-grey: #EDEDED;
 $light-grey: #CCC;
 $mid-grey: #999;
