--- a/app/styles/components/_nav.css
+++ b/app/styles/components/_nav.css
@@ -2,7 +2,8 @@
   margin-top: 1.2em;
   height: $nav-height;
   box-shadow: 0 0 2px rgba(0,0,0,.5);
-  padding: 1em;
+  /*padding: 1em;*/
+  padding: 0.5em;
   align-items: center;
   background-color: #37b893;
   z-index: 1;
