--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,3 +26,4 @@
 @import 'components/_form.css';
 @import 'components/_nav.css';
 @import 'components/_loading-indicator.css';
+@import 'components/_alert-column.css';
