Added possibility to create and delete pages

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,6 +22,7 @@
 @import 'components/_buttons.css';
 @import 'components/_home.css';
 @import 'components/_edit.css';
+@import 'components/_edit-page.css';
 @import 'components/_form-page.css';
 @import 'components/_form.css';
 @import 'components/_nav.css';
