--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -28,3 +28,4 @@
 @import 'components/_nav.css';
 @import 'components/_loading-indicator.css';
 @import 'components/_alert-column.css';
+@import 'components/_terms-table.css';
